# TP_Algorithms_tasks

./: CMakeLists.txt  README.md  task1.cpp  task1_2.cpp  task2.cpp  task2_1.cpp  task2_2.cpp  task3.cpp  task3_1.cpp  task4.cpp  task4_1.cpp  task4_3.cpp  task5.cpp  task5_3.cpp  task6_3.cpp  task7_3.cpp  tasks.txt
