cmake_minimum_required(VERSION 3.15)
project(TP_DATA)

set(CMAKE_CXX_STANDARD 14)

add_executable(TASK_1 task1_4.cpp)
add_executable(TASK_2 task2_1.cpp)
add_executable(TASK_3 task3_1.cpp)
add_executable(TASK_4 task4_3.cpp)
add_executable(TASK_5 task5_3.cpp)
add_executable(TASK_6 task6_3.cpp)
add_executable(TASK_7 task7_3.cpp)